--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <br /><br /><br /><br /><br /><br />
 <center>
-<img src="kepler.png" height="350" />
+<img src="kepler.png" />
 </center>
 </body>
 
